--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -5,7 +5,7 @@
     </a>
   </div>
 
-  <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
+  <%# <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
     <h1 class="display-4 fw-normal text-body-emphasis">Pricing</h1>
-  </div>
+  </div> %>
 </header>
