--- a/app/views/quiz/result.html.erb
+++ b/app/views/quiz/result.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
   <h2>結果画面</h2>
   <!-- 正解数表示、Twitter共有ボタンなど -->
+  <%= link_to 'もう一度', quiz_restart_path, class: 'btn btn-primary' %>
 </div>
-
