--- a/app/views/quiz/result.html.erb
+++ b/app/views/quiz/result.html.erb
@@ -1,3 +1,5 @@
+<%= stylesheet_link_tag 'quiz', media: 'all', 'data-turbolinks-track': 'reload' %>
+
 <div class="container">
   <h2>結果画面</h2>
   <p>正解数: <%= session[:results].count { |result| result[:correct] } %> / <%= @total_questions %></p>
@@ -17,28 +19,23 @@
   <div class="pokemon-grid">
     <% result['all_pokemons'].each_with_index do |pokemon_id, index| %>
       <% pokemon = Pokemon.find_by(id: pokemon_id) %>
-<% if pokemon.present? && pokemon.image_url.present? %>
-  <div class="pokemon-cell <%= result['correct_pokemons'].include?(pokemon_id) ? 'selected' : '' %>">
-    <%= image_tag pokemon.image_url %>
-    <%= pokemon.name %>
-  </div>
-<% else %>
-  <div class="pokemon-cell">
-    <%= "Pokemon with ID #{pokemon_id} not found or image missing" %>
-  </div>
-<% end %>
-
-
-
-      <div class="pokemon-cell <%= result['correct_pokemons'].include?(pokemon_id) ? 'selected' : '' %>">
-        <%= image_tag pokemon.image_url %>
-        <%= pokemon.name %>
-      </div>
+      <% if pokemon.present? && pokemon.image_url.present? %>
+        <!-- pokemon-cell クラスを追加 -->
+        <div class="pokemon-cell <%= result['correct_pokemons'].include?(pokemon_id) ? 'selected' : '' %>">
+          <%= image_tag pokemon.image_url %>
+          <!--<%= pokemon.name %>-->
+        </div>
+      <% else %>
+        <div class="pokemon-cell">
+          <%= "Pokemon with ID #{pokemon_id} not found or image missing" %>
+        </div>
+      <% end %>
     <% end %>
   </div>
 <% else %>
   <p>この問題には 'all_pokemons' のデータがありません。</p>
 <% end %>
+
 
 
       </li>
