--- a/app/assets/stylesheets/quiz.css
+++ b/app/assets/stylesheets/quiz.css
@@ -23,20 +23,22 @@
 .pokemon-cell {
   width: 100%;
   position: relative;
+  display: inline-block; /* 追加 */
 }
 
 .pokemon-cell::before {
   content: "";
   display: block;
-  padding-top: 100%; /* アスペクト比を1:1に保つ */
+  padding-top: 100%;
+  float: left; /* 追加 */
 }
 
 .pokemon-cell img {
-  position: absolute;
+  position: relative; /* absoluteからrelativeに変更 */
   width: 100%;
   height: 100%;
-  object-fit: cover; /* 画像をセルにフィットさせる */
-  cursor: pointer; /* ここを追加 */
+  object-fit: cover;
+  cursor: pointer;
 }
 
 #confirm-button-container {
