--- a/app/views/quiz/result.html.erb
+++ b/app/views/quiz/result.html.erb
@@ -15,6 +15,18 @@
         <%= "Is result[:all_pokemons] nil?: #{result[:all_pokemons].nil?}" %>
         <%= "Is result[:all_pokemons] empty?: #{result[:all_pokemons]&.empty?}" %>
 
+        <%# ここで出題されたポケモンの名前とタイプを出力 %>
+        <% if result['all_pokemons'].present? %>
+          <% result['all_pokemons'].each do |pokemon_id| %>
+            <% pokemon = Pokemon.find_by(id: pokemon_id) %>
+            <% if pokemon.present? %>
+              <%= "Pokemon Name: #{pokemon.name}, Pokemon Type: #{pokemon.type.name}" %><br>
+            <% else %>
+              <%= "Pokemon with ID #{pokemon_id} not found" %><br>
+            <% end %>
+          <% end %>
+        <% end %>
+
 <% if result['all_pokemons'].present? %>
   <div class="pokemon-grid">
     <% result['all_pokemons'].each_with_index do |pokemon_id, index| %>
