--- a/app/assets/stylesheets/quiz.css
+++ b/app/assets/stylesheets/quiz.css
@@ -65,3 +65,67 @@
   margin-top: 150px; /* 上部の余白を追加 */
   text-align: center; /* ボタンを中央寄せにする */
 }
+
+.answers {
+  padding-left: 0;
+}
+.answer {
+  list-style: none;
+  margin-bottom: 10px;
+}
+
+/* タイプカラー */
+.type-dark {
+  background-color: #705848;
+}
+.type-rock {
+  background-color: #b8a038;
+}
+.type-psychic {
+  background-color: #f85888;
+}
+.type-fighting {
+  background-color: #c03028;
+}
+.type-grass {
+  background-color: #78c850;
+}
+.type-ghost {
+  background-color: #705898;
+}
+.type-ice {
+  background-color: #98d8d8;
+}
+.type-ground {
+  background-color: #e0c068;
+}
+.type-electric {
+  background-color: #f8d030;
+}
+.type-poison {
+  background-color: #a040a0;
+}
+.type-dragon {
+  background-color: #7038f8;
+}
+.type-normal {
+  background-color: #a8a878;
+}
+.type-steel {
+  background-color: #b8b8d0;
+}
+.type-flying {
+  background-color: #a890f0;
+}
+.type-fairy {
+  background-color: #ee99ac;
+}
+.type-fire {
+  background-color: #f08030;
+}
+.type-water {
+  background-color: #6890f0;
+}
+.type-bug {
+  background-color: #a8b820;
+}
