--- a/app/assets/stylesheets/quiz.css
+++ b/app/assets/stylesheets/quiz.css
@@ -1,3 +1,15 @@
+@media (max-width: 480px) {
+  .pokemon-grid {
+    grid-template-columns: repeat(2, 1fr); /* 2列に変更 */
+  }
+  .pokemon-cell::before {
+    padding-top: 100%; /* 既存のスタイルを維持 */
+  }
+  .pokemon-cell img {
+    object-fit: cover; /* 既存のスタイルを維持 */
+  }
+}
+
 .question {
   margin-top: 15px;
   margin-bottom: 15px;
@@ -24,6 +36,7 @@
   width: 100%;
   position: relative;
   display: inline-block; /* 追加 */
+  background-color: #e0e0e0;
 }
 
 .pokemon-cell::before {
@@ -58,20 +71,54 @@
 }
 
 #confirm:hover {
-  background-color: #b2ebf2; /* ホバー時に薄い水色に */
+  background-color: #a0c4e2;
 }
 
 #confirm-button-container {
-  margin-top: 150px; /* 上部の余白を追加 */
-  text-align: center; /* ボタンを中央寄せにする */
+  margin-top: 10px;
+  text-align: right;
+}
+
+#button-and-icons {
+  display: flex; /* フレックスボックスを使用 */
+  justify-content: space-between; /* 確認ボタンとアイコンコンテナを両端に配置 */
+  align-items: center; /* アイテムを中央揃えに */
+}
+
+#icon-container {
+  display: flex; /* フレックスボックスを使用 */
+  justify-content: flex-start; /* アイコンを左寄せに */
+  padding-left: 10px; /* アイコンとボタンの間隔を開ける */
+}
+
+.icon {
+  margin-right: 20px; /* アイコン間の間隔を設定 */
+  width: 30px; /* アイコンの幅を設定 */
+  height: 30px; /* アイコンの高さを設定 */
+}
+
+.rotate-icon {
+  transform: rotate(45deg); /* 90度回転 */
 }
 
 .answers {
-  padding-left: 0;
+  padding: 0;
 }
 .answer {
   list-style: none;
   margin-bottom: 10px;
+  padding-top: 60px;
+}
+
+.answer .pokemon-cell img.pokemon-image {
+  width: 100%;
+  height: 80%; /* 画像の高さを縮小 */
+}
+
+.answer .pokemon-types {
+  display: flex; /* フレックスボックスを使用 */
+  justify-content: center; /* 中央寄せ */
+  margin-top: 5px; /* 上部の余白 */
 }
 
 /* タイプカラー */
@@ -128,4 +175,24 @@
 }
 .type-bug {
   background-color: #a8b820;
+}
+
+.selected .checkmark {
+  display: block; /* チェックマークを表示 */
+}
+
+.checkmark {
+  display: none; /* デフォルトでは非表示 */
+  position: absolute; /* 絶対位置指定 */
+  top: 5px; /* 左上に配置 */
+  left: 5px;
+  width: 24px; /* アイコンサイズ */
+  height: 24px; /* アイコンサイズ */
+}
+
+.badge {
+  display: inline-block;
+  margin-top: 5px; /* 画像との間隔 */
+  padding: 2px 8px; /* 内側の余白 */
+  /* その他のスタイリング（背景色、文字色など） */
 }
