--- a/app/views/quiz/result.html.erb
+++ b/app/views/quiz/result.html.erb
@@ -55,7 +55,12 @@
       </li>
     <% end %>
   </ul>
-  <%= link_to 'もう一度', quiz_restart_path, class: 'btn btn-primary' %>
+  <div class="button-container">
+    <%= link_to 'もう一度', quiz_restart_path, class: 'btn btn-primary' %>
+    <a href="https://twitter.com/intent/tweet?text=<%= CGI.escape("正解数: #{@correct_count} / #{@total_questions} でした！ / クイズURL: https://your-app-url.com/") %>" target="_blank" style="background-color: #0f1419; color: #fff;" class="btn btn-twitter">
+      &#x1D54F;でシェア
+    </a>
+  </div>
 </div>
 
 <style>
