--- a/app/views/quiz/new.html.erb
+++ b/app/views/quiz/new.html.erb
@@ -6,8 +6,13 @@
     <%= stylesheet_link_tag 'quiz', media: 'all', 'data-turbolinks-track': 'reload' %>
 </head>
 <body>
-    <h1>クイズ画面</h1>
-    <h2><%= @current_question_number %>/<%= @total_questions %>問目</h2>
+    <div class="progress-container">
+      <% (1..5).each do |i| %>
+        <div class="progress-bar <%= 'active' if i <= @current_question_number %>">
+          <!--<%= i %>-->
+        </div>
+      <% end %>
+    </div>
     <h1 class="question"><span class="type-name"><%= t("types.#{@type.name}") %>タイプ</span><br>のポケモンの画像を全て選択してください。</h1>
 
     <div class="pokemon-grid">
@@ -20,6 +25,8 @@
         </div>
       <% end %>
     </div>
+
+    <div class="separator-line"></div>
 
     <div id="confirm-button-container">
       <div id="button-and-icons">
