--- a/app/views/quiz/result.html.erb
+++ b/app/views/quiz/result.html.erb
@@ -1,8 +1,17 @@
-<%= stylesheet_link_tag 'quiz', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_link_tag 'quiz', media: 'all' %>
 
 <div class="container result-page">
-  <h2>結果</h2>
-  <p><%= @total_questions %>問中<%= @correct_count %>問正解！</p>
+  <div class="circular-progress-container">
+    <svg class="circular-progress" viewBox="0 0 100 100">
+      <circle class="circular-bg" cx="50" cy="50" r="45"></circle>
+      <circle class="circular-bar" cx="50" cy="50" r="45" style="stroke-dashoffset: <%= 282.6 - (282.6 * @correct_count / 5.0) %>;"></circle>
+    </svg>
+    <div class="circular-progress-label">
+      <span class="circular-progress-big-number"><%= @correct_count %></span><span class="small-text">/5問</span><br>
+      正解！
+    </div>
+  </div>
+
   <ul class="answers">
     <% session[:results].each_with_index do |result, index| %>
       <li class="answer">
@@ -13,12 +22,7 @@
         </h3>
 
         <p><%= result['correct'] ? '正解！' : '不正解' %></p>
-        <!--<% result['all_pokemons'].each do |pokemon_id| %>
-          <% pokemon = Pokemon.find_by(id: pokemon_id) %>
-          <% if pokemon.present? %>
-            <%= "Pokemon Name: #{pokemon.name}, Type ID: #{pokemon.type_id}, Secondary Type ID: #{pokemon.secondary_type_id}, Fake Type ID: #{pokemon.fake_type_id}" %><br>
-          <% end %>
-        <% end %>-->
+
 
         <% if result['all_pokemons'].present? %>
           <div class="pokemon-grid">
@@ -71,3 +75,21 @@
     cursor: default !important;
   }
 </style>
+
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+    const circle = document.querySelector(".circular-bar");
+    const correctCount = <%= @correct_count %>;
+    const circumference = 282.6;
+    const perQuestionLength = circumference / 5.0;
+    const correctLength = perQuestionLength * correctCount;
+
+    circle.style.strokeDasharray = `${circumference} ${circumference}`;
+    circle.style.strokeDashoffset = circumference; // 初期値を設定
+
+    setTimeout(() => {
+      circle.style.transition = `stroke-dashoffset 1s ease-out`;
+      circle.style.strokeDashoffset = circumference - correctLength; // 正解数に基づいて値を設定
+    }, 10);
+  });
+</script>
