--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,6 @@
 <div class="container">
-  <h1>ポケモンクイズへようこそ！</h1>
+  <h1>ポケモンタイプクイズへようこそ！</h1>
   <p>アプリの目的と遊び方の簡単な説明。</p>
   <%= link_to 'クイズスタート！', quiz_start_path, class: 'btn btn-primary' %>
   <!-- ロゴ・イラストなど -->
 </div>
- 
