:fire: ホームページの削除

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,8 +1,8 @@
 <header>
   <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
-    <a href="/" class="d-flex align-items-center link-body-emphasis text-decoration-none">
+    <%# <a href="/" class="d-flex align-items-center link-body-emphasis text-decoration-none"> %>
       <span class="fs-4">ポケタイプ</span>
-    </a>
+    <%# </a> %>
   </div>
 
   <%# <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
