--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,17 @@
-<div class="container">
-  <h1>ポケモンタイプクイズへようこそ！</h1>
-  <p>アプリの目的と遊び方の簡単な説明。</p>
-  <%= link_to 'クイズスタート！', quiz_start_path, class: 'btn btn-primary' %>
-  <!-- ロゴ・イラストなど -->
+<div class="container text-center">
+  <div class="row">
+    <div class="col-12">
+      <h1 class="display-4">ポケモンタイプクイズへようこそ！</h1>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+      <p class="lead">アプリの目的と遊び方の簡単な説明。</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+      <%= link_to 'クイズスタート！', quiz_start_path, class: 'btn btn-primary btn-lg' %>
+    </div>
+  </div>
 </div>
