--- a/app/views/quiz/result.html.erb
+++ b/app/views/quiz/result.html.erb
@@ -3,15 +3,24 @@
 <div class="container result-page">
   <h2>結果</h2>
   <div class="progress-circle-container">
-<div class="progress-circle">
-  <svg class="progress-svg">
-    <circle class="progress-background" cx="50%" cy="50%" r="48%"></circle>
-    <circle class="progress-bar" cx="50%" cy="50%" r="48%" style="stroke-dashoffset: <%= 301.6 - ((@correct_count / @total_questions.to_f) * 301.6) %>px;"></circle>
-  </svg>
-  <div class="progress-text">
-    <span class="big-number"><%= @correct_count %></span><span>/5問</span><br>正解！
+    <div class="progress-circle-container">
+      <div class="progress-circle quiz-progress-circle">
+        <svg class="progress-svg quiz-progress-svg">
+          <circle class="progress-background quiz-progress-background" cx="50%" cy="50%" r="48%"></circle>
+          <circle class="progress-bar quiz-progress-bar" cx="50%" cy="50%" r="48%"></circle>
+        </svg>
+        <div class="progress-text quiz-progress-text">
+          <span class="big-number"><%= @correct_count %></span><span>/5問</span><br>正解！
+        </div>
+      </div>
+    </div>
   </div>
-</div>
+
+  <div class="button-container">
+    <%= link_to 'もう一度', quiz_restart_path, class: 'btn btn-primary' %>
+    <a href="https://twitter.com/intent/tweet?text=<%= CGI.escape("正解数: #{@correct_count} / #{@total_questions} でした！ / クイズURL: https://your-app-url.com/") %>" target="_blank" style="background-color: #0f1419; color: #fff;" class="btn btn-twitter">
+      &#x1D54F;でシェア
+    </a>
   </div>
 
   <ul class="answers">
@@ -79,19 +88,13 @@
 </style>
 
 <script>
-  document.addEventListener("DOMContentLoaded", function() {
-    const circle = document.querySelector(".circular-bar");
+  document.addEventListener('turbo:load', function() {
     const correctCount = <%= @correct_count %>;
-    const circumference = 282.6;
-    const perQuestionLength = circumference / 5.0;
-    const correctLength = perQuestionLength * correctCount;
+    const totalQuestions = 5; // トータルの質問数
+    const circle = document.querySelector('.quiz-progress-bar');
+    const circumference = 603.2; // 2 * Math.PI * 48% of 200px
+    const offset = circumference - ((correctCount / totalQuestions) * circumference);
 
-    circle.style.strokeDasharray = `${circumference} ${circumference}`;
-    circle.style.strokeDashoffset = circumference; // 初期値を設定
-
-    setTimeout(() => {
-      circle.style.transition = `stroke-dashoffset 1s ease-out`;
-      circle.style.strokeDashoffset = circumference - correctLength; // 正解数に基づいて値を設定
-    }, 10);
+    circle.style.strokeDashoffset = offset;
   });
 </script>
