Xシェア時のURLを修正

--- a/app/views/quiz/result.html.erb
+++ b/app/views/quiz/result.html.erb
@@ -1,3 +1,10 @@
+<% content_for :meta_tags do %>
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="ポケモンタイプクイズ">
+  <meta name="twitter:description" content="私のスコアは<%= @correct_count %>点です！">
+  <meta name="twitter:image" content="https://poketype-c68682b46016.herokuapp.com/images/image.jpg">
+<% end %>
+
 <%= stylesheet_link_tag 'quiz', media: 'all' %>
 
 <div class="container result-page">
@@ -72,9 +79,9 @@
   </ul>
   <div class="button-container">
     <%= link_to 'もう一度', quiz_restart_path, class: 'btn btn-primary' %>
-    <a href="https://twitter.com/intent/tweet?text=<%= CGI.escape("正解数: #{@correct_count} / #{@total_questions} でした！ / クイズURL: https://poketype-c68682b46016.herokuapp.com/quiz/result") %>" target="_blank" style="background-color: #0f1419; color: #fff;" class="btn btn-twitter">
-      &#x1D54F;でシェア
-    </a>
+      <a href="https://twitter.com/intent/tweet?text=<%= CGI.escape("正解数: #{@correct_count} / #{@total_questions} でした！ / クイズURL: https://poketype-c68682b46016.herokuapp.com/") %>" target="_blank" style="background-color: #0f1419; color: #fff;" class="btn btn-twitter">
+        &#x1D54F;でシェア
+      </a>
   </div>
 </div>
 
