画像URLの修正

--- a/app/views/quiz/result.html.erb
+++ b/app/views/quiz/result.html.erb
@@ -2,7 +2,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="ポケモンタイプクイズ">
   <meta name="twitter:description" content="私のスコアは<%= @correct_count %>点です！">
-  <meta name="twitter:image" content="https://poketype-c68682b46016.herokuapp.com/images/image.jpg">
+  <meta name="twitter:image" content="https://poketype-c68682b46016.herokuapp.com/images/poketype.png">
 <% end %>
 
 <%= stylesheet_link_tag 'quiz', media: 'all' %>
