--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,11 +1,7 @@
 <header>
-  <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
-    <%# <a href="/" class="d-flex align-items-center link-body-emphasis text-decoration-none"> %>
-      <span class="fs-4">ポケタイプ</span>
-    <%# </a> %>
+  <div class="d-flex justify-content-center align-items-center pb-3 mb-4 border-bottom">
+    <img src="/images/pokeball.png" alt="Pokeball Icon" class="me-2" style="width: 34px; height: 28px;">
+    <span class="fs-4">ポケモンタイプチェッカー</span>
+    <img src="/images/pokeball.png" alt="Pokeball Icon" class="ms-2" style="width: 34px; height: 28px;">
   </div>
-
-  <%# <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-    <h1 class="display-4 fw-normal text-body-emphasis">Pricing</h1>
-  </div> %>
 </header>
