タイトル変更

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,7 +1,7 @@
 <header>
   <div class="d-flex justify-content-center align-items-center pb-3 mb-4 border-bottom">
     <img src="/images/pokeball.png" alt="Pokeball Icon" class="me-2" style="width: 34px; height: 28px;">
-    <span class="fs-4">ポケモンタイプチェッカー</span>
+    <span class="fs-4">ポケモンタイプマスター</span>
     <img src="/images/pokeball.png" alt="Pokeball Icon" class="ms-2" style="width: 34px; height: 28px;">
   </div>
 </header>
